add logic to delete konsulen. and mahasiwa from user
