# docs/swagger.json
@@ -109,7 +109,7 @@
                     {
                         "type": "integer",
                         "description": "Absen ID",
-                        "name": "id",
+                        "name": "id_absen",
                         "in": "path",
                         "required": true
                     }
@@ -143,7 +143,7 @@
                     {
                         "type": "integer",
                         "description": "ID User",
-                        "name": "id",
+                        "name": "id_user",
                         "in": "path",
                         "required": true
                     }
@@ -186,7 +186,7 @@
                     {
                         "type": "integer",
                         "description": "Absen ID",
-                        "name": "id",
+                        "name": "id_absen",
                         "in": "path",
                         "required": true
                     }
@@ -287,7 +287,7 @@
                     {
                         "type": "integer",
                         "description": "ELogBook ID",
-                        "name": "id",
+                        "name": "id_elogbook",
                         "in": "path",
                         "required": true
                     }
@@ -321,7 +321,7 @@
                     {
                         "type": "integer",
                         "description": "ID User",
-                        "name": "id",
+                        "name": "id_user",
                         "in": "path",
                         "required": true
                     }
@@ -361,6 +361,45 @@
                 }
             }
         },
+        "/api/konsulen/create": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "create new Konsulen.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Konsulen"
+                ],
+                "summary": "create Konsulen.",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CreateKonsulenRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/konsulen/get/{id_konsulen}": {
             "get": {
                 "security": [
@@ -380,7 +419,7 @@
                     {
                         "type": "integer",
                         "description": "ID Konsulen",
-                        "name": "id",
+                        "name": "id_konsulen",
                         "in": "path",
                         "required": true
                     }
@@ -512,7 +551,7 @@
                     {
                         "type": "integer",
                         "description": "User ID",
-                        "name": "id",
+                        "name": "id_user",
                         "in": "path",
                         "required": true
                     }
@@ -546,7 +585,50 @@
                     {
                         "type": "integer",
                         "description": "User ID",
-                        "name": "id",
+                        "name": "id_user",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/user/update/{id_elogbook}": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "update ELogBook by ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ELogBook"
+                ],
+                "summary": "update ELogBook.",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.UpdateELogBookRequest"
+                        }
+                    },
+                    {
+                        "type": "integer",
+                        "description": "ELogBook ID",
+                        "name": "id_elogbook",
                         "in": "path",
                         "required": true
                     }
@@ -589,7 +671,7 @@
                     {
                         "type": "integer",
                         "description": "User ID",
-                        "name": "id",
+                        "name": "id_user",
                         "in": "path",
                         "required": true
                     }
@@ -629,6 +711,23 @@
                 }
             }
         },
+        "request.CreateKonsulenRequest": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "spesialis": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "request.CreateUserRequest": {
             "type": "object",
             "properties": {
@@ -663,10 +762,30 @@
                 "absen_flag": {
                     "type": "integer"
                 },
-                "id_user": {
+                "lokasi": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.UpdateELogBookRequest": {
+            "type": "object",
+            "properties": {
+                "deskripsi": {
+                    "type": "string"
+                },
+                "end_time": {
                     "type": "integer"
                 },
-                "lokasi": {
+                "jumlah": {
+                    "type": "integer"
+                },
+                "medical_record": {
+                    "type": "string"
+                },
+                "start_time": {
+                    "type": "integer"
+                },
+                "title": {
                     "type": "string"
                 }
             }
