# handler/konsulenHandler.go
@@ -3,6 +3,7 @@ package handler
 import (
 	"sipekom-rest-api/database"
 	"sipekom-rest-api/model/entity"
+	"sipekom-rest-api/model/request"
 	"sipekom-rest-api/model/response"
 	"sipekom-rest-api/model/static"
 	"sipekom-rest-api/utils"
@@ -40,7 +41,7 @@ func GetAllKonsulen(c *fiber.Ctx) error {
 // @Tags Konsulen
 // @Produce json
 // @Success 200 {object} response.Response
-// @Param id path int64 true "ID Konsulen"
+// @Param id_konsulen path int64 true "ID Konsulen"
 // @Router /api/konsulen/get/{id_konsulen} [get]
 func GetKonsulen(c *fiber.Ctx) error {
 	resp := new(response.Response)
@@ -64,5 +65,61 @@ func GetKonsulen(c *fiber.Ctx) error {
 	resp.Status = static.StatusSuccess
 	resp.Message = "Konsulen is Found"
 	resp.Data = konsulen
+	return c.Status(fiber.StatusOK).JSON(resp)
+}
+
+// @User godoc
+// @Security ApiKeyAuth
+// @Summary create Konsulen.
+// @Description create new Konsulen.
+// @Tags Konsulen
+// @Accept json
+// @Produce json
+// @param body body request.CreateKonsulenRequest true "body"
+// @Success 200 {object} response.Response
+// @Router /api/konsulen/create [post]
+func CreateKonsulen(c *fiber.Ctx) error {
+	resp := new(response.Response)
+	resp.Status = static.StatusError
+	resp.Data = nil
+
+	newKonsulenData := new(request.CreateKonsulenRequest)
+	if err := c.BodyParser(&newKonsulenData); err != nil {
+		resp.Message = "Review your input"
+		return c.Status(fiber.StatusOK).JSON(resp)
+	}
+
+	var err error
+	newKonsulenData.Password, err = utils.HashPassword(newKonsulenData.Password)
+	if err != nil {
+		resp.Message = "Hashing Failed"
+		return c.Status(fiber.StatusOK).JSON(resp)
+	}
+
+	db := database.DB
+	newUserModel := new(entity.User)
+	newUserModel.Username = newKonsulenData.Username
+	newUserModel.Password = newKonsulenData.Password
+	newUserModel.Level = static.LevelKonsulen
+	newUserModel.IsActivated = static.Activated
+
+	if err := db.Create(&newUserModel).Error; err != nil {
+		resp.Message = "Username Already Exist"
+		return c.Status(fiber.StatusOK).JSON(resp)
+	}
+
+	newKonsulen := new(entity.Konsulen)
+	newKonsulen.Name = newKonsulenData.Name
+	newKonsulen.Spesialis = newKonsulenData.Spesialis
+	newKonsulen.IDUser = newUserModel.ID
+
+	if err := db.Create(&newKonsulen).Error; err != nil {
+		resp.Message = "Invalid Data"
+		return c.Status(fiber.StatusOK).JSON(resp)
+	}
+
+	resp.Status = static.StatusSuccess
+	resp.Message = "Konsulen successfully Created"
+	resp.Data = newKonsulen
 	return c.Status(fiber.StatusOK).JSON(resp)
 }
