# model/request/eLogBookRequest.go
@@ -8,3 +8,12 @@ type CreateELogBookRequest struct {
 	Deskripsi      string `json:"deskripsi"`
 	Medical_Record string `json:"medical_record"`
 }
+
+type UpdateELogBookRequest struct {
+	Title          string `json:"title"`
+	Jumlah         uint   `json:"jumlah"`
+	StartTime      int64  `json:"start_time"`
+	EndTime        int64  `json:"end_time"`
+	Deskripsi      string `json:"deskripsi"`
+	Medical_Record string `json:"medical_record"`
+}
