# model/request/konsulenRequest.go
@@ -1,0 +1,8 @@
+package request
+
+type CreateKonsulenRequest struct {
+	Username  string `json:"username"`
+	Password  string `json:"password"`
+	Name      string `json:"name"`
+	Spesialis string `json:"spesialis"`
+}
